src/main/java/com/example/demo/Error/Code/ErrorType.java
package com.example.demo.Error.Code;

public enum  ErrorType {
    ERROR_ONE,
    ERROR_TWO,
    INTERNAL_SERVER_ERROR; // Default Exception
}

